--- a/ReactJS/letmeask/src/styles/button.scss
+++ b/ReactJS/letmeask/src/styles/button.scss
@@ -1,6 +1,5 @@
 .button {
 
-  margin-top: 64px;
   height: 50px;
   border-radius: 8px;
   font-weight: 500;
@@ -20,6 +19,12 @@
 
   img{
     margin-right: 8px;
+  }
+
+  &.outlined {
+    background: #FFF;
+    border: 1px solid #835afd;
+    color: #835afd;
   }
 
   &:not(:disabled):hover{
